--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
 		"arg": "4.1.0",
 		"content-type": "1.0.4",
 		"raw-body": "2.4.1"
+	},
+	"devDependencies": {
+		"@types/node": "^14.14.6"
 	}
 }
